adicionando principios css

--- a/contato.html
+++ b/contato.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/CSS/style.CSS">
     <title>Contato</title>
 </head>
 
 <body>
+    <h1>Fale comigo</h1>
 
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index.html"> Home</a>
         </li>
@@ -20,33 +22,58 @@
 
     </ul>
 
-    <h1> Fale Comigo! </h1>
+   
 
-    <forms>
-        <label for="nome"> Nome :</label>
-        <input type="text" id="nome">
-        <BR>
-        <BR>
-        <label for="email"> Email :</label>
-        <input type="email" id="email">
-        <br>
-        <BR>
-        <label for="assunto"> Assunto :</label> <BR>
-        <textarea name="assunto" id="assunto" rows="10" cols="50"></textarea>
-        <br>
-        <button>ENVIAR</button>
-    </forms>
+    <div class="container">
 
-    <h2>Endereço</h2>
+        <div>
+           
+            <forms>
+                <label for="nome"> Nome :</label>
+                <input type="text" id="nome">
+                <BR>
+                <BR>
+                <label for="email"> Email :</label>
+                <input type="email" id="email">
+                <br>
+                <BR>
+                <label for="assunto"> Assunto :</label> <BR>
+                <textarea name="assunto" id="assunto" rows="10" cols="50"></textarea>
+                <br>
+                <button>ENVIAR</button>
+            </forms>
 
-    <p> Armazen 10, Av. Alfredo Lisboa, s/n </p>
+        </div>
 
-    <p>Recife, PE, 50030-150</p>
+        <div class="ml-50">
+          
 
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.4030838444087!2d-34.872187985220144!3d-8.06030209419637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18a24fe6ec27%3A0xbf67f7d56acfbd5d!2sCentro%20Cultural%20Cais%20do%20Sert%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1661205707067!5m2!1spt-BR!2sbr"
-        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p> Armazen 10, Av. Alfredo Lisboa, s/n </p>
+
+            <p>Recife, PE, 50030-150</p>
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.4030838444087!2d-34.872187985220144!3d-8.06030209419637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18a24fe6ec27%3A0xbf67f7d56acfbd5d!2sCentro%20Cultural%20Cais%20do%20Sert%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1661205707067!5m2!1spt-BR!2sbr"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        </div>
+    </div>
+
+
+
 </body>
+<hr>
+<FOOter>
+    <DIV class="container">
+
+        <a href="https://www.linkedin.com/" target="_blank"> <img class="tm-social" src="assets/img/linkedin.png"
+                alt="logo linkedin"></a>
+        <a href="https://github.com/" target="_blank"><img class="tm-social" src="assets/img/placa-do-github.png"
+                alt="logo do github "></a>
+
+    </DIV>
+    Todos direitos reservados: &copy Elis Cavalcante
+</FOOter>
 
 </html>
