--- a/index.html
+++ b/index.html
@@ -6,30 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elis Cavalcante Blog</title>
+    <link rel="stylesheet" href="assets/CSS/style.CSS">
 </head>
 
 <body>
 
-    <ul>
-        <li> 
-            <a href = "index.html" > Home</a>
-        </li> 
-        <li> 
-            <a href = "Contato.html" > Contato</a>
-        </li> 
+    <ul id="menu">
+        <li>
+            <a href="index.html"> Home</a>
+        </li>
+        <li>
+            <a href="Contato.html"> Contato</a>
+        </li>
 
     </ul>
-
     <h1> Sobre Mim </h1>
+    <div class="container"  >
+        
+        <p class="p-30" class="justify"> Mussum Ipsum, cacilds vidis litro abertis.
+            Per aumento de cachacis, eu reclamis.
+            Manduma pindureta quium dia nois paga.Paisis, filhis, espiritis santis.Quem manda na minha terra sou
+            euzis!Delegadis gente finis, bibendum egestas augue arcu ut est.Atirei o pau no gatis, per gatis num
+            morreus.
 
-    <p>Mussum Ipsum, cacilds vidis litro abertis.
-        Per aumento de cachacis, eu reclamis.
-        Manduma pindureta quium dia nois paga.</p>
+            Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.Suco de cevadiss, é um
+            leite divinis, qui tem lupuliz, matis, aguis e fermentis.</p>
 
-    <img src="assets/img/103153685.jpg" alt="Foto de Elis" >
+        <div>
+            <img class="bordas" src="assets/img/103153685.jpg" alt="Foto de Elis">
+        </div>
+    </div>
 
-    
+
+    <h2>Video</h2>
+
+    <div class="v1">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/37SwqREHRGI" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </div>
+</body>
+<hr>
+<FOOter>
+    <DIV class="container">
+
+        <a href="https://www.linkedin.com/" target="_blank"> <img class="tm-social" src="assets/img/linkedin.png"
+                alt="logo linkedin"></a>
+        <a href="https://github.com/" target="_blank"><img class="tm-social" src="assets/img/placa-do-github.png"
+                alt="logo do github "></a>
+
+    </DIV>
+    Todos direitos reservados: &copy Elis Cavalcante
+</FOOter>
 
 </html>
-
-    </body>
