--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <a href="https://www.linkedin.com/" target="_blank"> <img class="tm-social" src="assets/img/linkedin.png"
                 alt="logo linkedin"></a>
-        <a href="https://github.com/" target="_blank"><img class="tm-social" src="assets/img/placa-do-github.png"
+        <a href="https://github.com/" target="_blank"><img class="tm-social" src="assets/img/github.png"
                 alt="logo do github "></a>
 
     </DIV>
